I added birdwing shared files - please review

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@ debian/*substvars*
 *.pdb
 *.vcxproj
 *.rc
+
+
+cpp/include/bwcoreutils
+birdwing/*.hh
+birdwing/*.cc
+birdwing/toolhead_errors.py
+birdwing/machine_errors.py
+*.swp
+*.pyc
