--- a/birdwing/SConscript
+++ b/birdwing/SConscript
@@ -21,3 +21,7 @@ env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/machine
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/toolhead_errors.hh")
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/machine_errors_stringify.cc")
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/toolhead_errors_stringify.cc")
+
+# This is here to prevent "cannot find target 'install'"  errors. 
+# There may be a more logical thing to do with this alias 
+Alias("install", "obj")
