update birdwing error parsing

--- a/birdwing/SConscript
+++ b/birdwing/SConscript
@@ -1,9 +1,10 @@
 import os
 import subprocess
 
-env = Environment(ENV = os.environ, tools = ['default', 'mb_install'])
+env = Environment(ENV = os.environ, tools = ['default', 'birdwing_install'])
 
 command = os.path.join(str(Dir("#/")),  "birdwing/parse_enums.py") + ' -p -c'
+print(command)
 output_files = [
     'obj/machine_errors.hh',
     'obj/toolhead_errors.hh',
@@ -11,6 +12,7 @@ output_files = [
     'obj/toolhead_errors.py',
     ]
 input_files = [
+    'enum_parse.py',
     'parse_enums.py',
     'machine_errors.json',
     'toolhead_errors.json',
