--- a/birdwing/SConscript
+++ b/birdwing/SConscript
@@ -1,7 +1,10 @@
 import os
 import subprocess
 
-env = Environment(ENV = os.environ, tools = ['default', 'birdwing_install'])
+env = Environment(
+    ENV = os.environ,
+    tools = ['default', 'birdwing_install'],
+    toolpath = ['bw-scons-tools'])
 
 command = ' '.join(['"' + File("#/birdwing/parse_enums.py").abspath + '"', '-p', '-c'])
 
@@ -24,6 +27,6 @@ env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/toolhea
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/machine_errors_stringify.cc")
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/toolhead_errors_stringify.cc")
 
-# This is here to prevent "cannot find target 'install'"  errors. 
-# There may be a more logical thing to do with this alias 
+# This is here to prevent "cannot find target 'install'"  errors.
+# There may be a more logical thing to do with this alias
 Alias("install", "obj")
