Changes to make stringifier generation optional, since it shouldn't be on for machine constants (dicts are not 1:1 in that case)

--- a/birdwing/SConscript
+++ b/birdwing/SConscript
@@ -3,7 +3,7 @@ import subprocess
 
 env = Environment(ENV = os.environ, tools = ['default', 'birdwing_install'])
 
-command = os.path.join(str(Dir("#/")),  "birdwing/parse_enums.py") + ' -p -c'
+command = os.path.join(str(Dir("#/")),  "birdwing/parse_enums.py") + ' -p -c -s'
 print(command)
 output_files = [
     'obj/machine_errors.hh',
