support for UI errors

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ debian/*substvars*
 *.rc
 
 
-include/bwcoreutils
+include/bwcoreutils/all_errors.hh
+include/bwcoreutils/machine_errors.hh
+include/bwcoreutils/toolhead_errors.hh
 birdwing/*.hh
 birdwing/*.cc
 birdwing/toolhead_errors.py
