--- a/birdwing/SConscript
+++ b/birdwing/SConscript
@@ -24,6 +24,7 @@ env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/machine
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/toolhead_errors.hh")
 env.Install(os.path.join(str(Dir("#/")), 'include', 'bwcoreutils'), "obj/all_errors.hh")
 
+path = os.path.join(str(Dir("#/")), 'include', 'bwcoreutils')
 # This is here to prevent "cannot find target 'install'"  errors. 
 # There may be a more logical thing to do with this alias 
-Alias("install", "obj")
+Alias("install", path)
