--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,13 @@
 cmake_minimum_required(VERSION 2.6)
 project(MBCoreUtils)
-include_directories(include/mbcoreutils)
+option(MBCOREUTILS_LIB_BUILD_SHARED
+    "Build MBCOREUTILS_lib as a shared library."
+    OFF)
+if(MBCOREUTILS_LIB_BUILD_SHARED)
+  set(MBCOREUTILS_LIB_TYPE SHARED)
+  add_definitions( -DJSON_DLL_BUILD )
+else()
+  set(MBCOREUTILS_LIB_TYPE STATIC)
+endif()
+
 add_subdirectory(include/mbcoreutils)
