--- a/include/mbcoreutils/CMakeLists.txt
+++ b/include/mbcoreutils/CMakeLists.txt
@@ -1,13 +1,3 @@
-OPTION(MBCOREUTILS_LIB_BUILD_SHARED
-    "Build MBCOREUTILS_lib as a shared library."
-    OFF)
-IF(MBCOREUTILS_LIB_BUILD_SHARED)
-  SET(MBCOREUTILS_LIB_TYPE SHARED)
-  ADD_DEFINITIONS( -DJSON_DLL_BUILD )
-ELSE()
-  SET(MBCOREUTILS_LIB_TYPE STATIC)
-ENDIF()
-
 ADD_LIBRARY( MBCoreUtils_lib ${MBCOREUTILS_LIB_TYPE}
     angle.h
     appparameters.h
@@ -33,7 +23,7 @@ ADD_LIBRARY( MBCoreUtils_lib ${MBCOREUTILS_LIB_TYPE}
     version.h )
 
 SET_TARGET_PROPERTIES( MBCoreUtils_lib PROPERTIES OUTPUT_NAME MBCoreUtils )
-SET_TARGET_PROPERTIES( MBCoreUtils_lib PROPERTIES LINKER_LANGUAGE C )
+SET_TARGET_PROPERTIES( MBCoreUtils_lib PROPERTIES LINKER_LANGUAGE CXX )
 INSTALL( TARGETS MBCoreUtils_lib
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION lib
