copy files to include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,10 @@ add_custom_command(
         -o ${PROJECT_SOURCE_DIR}/birdwing/machine_errors.py
         -o ${PROJECT_SOURCE_DIR}/birdwing/toolhead_errors.py
         -i ${PROJECT_SOURCE_DIR}/birdwing/machine_errors.json
-        -i ${PROJECT_SOURCE_DIR}/birdwing/toolhead_errors.json)
+        -i ${PROJECT_SOURCE_DIR}/birdwing/toolhead_errors.json
+    COMMAND cp ${PROJECT_SOURCE_DIR}/include/bwcoreutils/machine_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils
+    COMMAND cp ${PROJECT_SOURCE_DIR}/include/bwcoreutils/toolhead_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils
+    COMMAND cp ${PROJECT_SOURCE_DIR}/include/bwcoreutils/all_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils)
 
 set_shared(false)
 install_headers(include/)
