dont use variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,9 @@ add_custom_command(
         -o ${PROJECT_SOURCE_DIR}/birdwing/toolhead_errors.py
         -i ${PROJECT_SOURCE_DIR}/birdwing/machine_errors.json
         -i ${PROJECT_SOURCE_DIR}/birdwing/toolhead_errors.json
-    COMMAND ${COPYCMD} ${PROJECT_SOURCE_DIR}/include/bwcoreutils/machine_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${COPYCMD} ${PROJECT_SOURCE_DIR}/include/bwcoreutils/toolhead_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${COPYCMD} ${PROJECT_SOURCE_DIR}/include/bwcoreutils/all_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils)
+    COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/include/bwcoreutils/machine_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils
+    COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/include/bwcoreutils/toolhead_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils
+    COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/include/bwcoreutils/all_errors.hh ${INCLUDE_OUTPUT_PATH}/bwcoreutils)
 add_custom_target(bwfiles
     DEPENDS
         ${PROJECT_SOURCE_DIR}/include/bwcoreutils/machine_errors.hh
