rearranging the cmakelists
to reduce redundancy. Also moved from a configure-time install
to a install-time install of headers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,54 +8,28 @@ find_package(
     REQUIRED)
 setup_environment()
 
+set(
+    generated_headers
+    ${PROJECT_BINARY_DIR}/shared_cpp/bot_error.hh
+    ${PROJECT_BINARY_DIR}/shared_cpp/tool_mappings.hh
+    ${PROJECT_BINARY_DIR}/shared_cpp/all_errors.hh
+    ${PROJECT_BINARY_DIR}/shared_cpp/bot_error_noqt.hh
+    ${PROJECT_BINARY_DIR}/machine_cpp/machine_definitions.hh
+    ${PROJECT_BINARY_DIR}/machine_cpp/machine_errors.hh
+    ${PROJECT_BINARY_DIR}/machine_cpp/machine_structs.hh
+    ${PROJECT_BINARY_DIR}/machine_cpp/toolhead_errors.hh
+    ${PROJECT_BINARY_DIR}/machine_cpp/toolhead_initialization.cc
+    ${PROJECT_BINARY_DIR}/machine_cpp/toolhead_toolidentifier.hh)
+
 add_custom_command(
     OUTPUT
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/bot_error.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/bot_error_noqt.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/tool_mappings.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/all_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/toolhead_toolidentifier.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/toolhead_initialization.cc
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/toolhead_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/machine_structs.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/machine_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/machine_definitions.hh
+        ${generated_headers}
     COMMAND ${PYTHON_EXECUTABLE}
         ${PROJECT_SOURCE_DIR}/site_scons/mustache_codegen.py
         -contexts ${PROJECT_SOURCE_DIR}/birdwing_codegen/contexts
         -templates ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates
         -transformations
             ${PROJECT_SOURCE_DIR}/birdwing_codegen/transformations.json
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/shared_cpp/bot_error.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/shared_cpp/tool_mappings.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/shared_cpp/all_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/shared_cpp/bot_error_noqt.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/machine_cpp/machine_definitions.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/machine_cpp/machine_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/machine_cpp/machine_structs.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/machine_cpp/toolhead_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/machine_cpp/toolhead_initialization.cc
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
-    COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_BINARY_DIR}/machine_cpp/toolhead_toolidentifier.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils
     DEPENDS
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/contexts/errors.json
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/contexts/machine_specific_enums.py
@@ -71,7 +45,7 @@ add_custom_command(
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/machine_cpp/toolhead_errors.hh
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/machine_cpp/toolhead_initialization.cc
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/machine_cpp/toolhead_toolidentifier.hh
-       
+
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/python/machine_definitions.py
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/python/machine_errors.py
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/python/machine_structs.py
@@ -82,20 +56,15 @@ add_custom_command(
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/shared_cpp/bot_error.hh
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/shared_cpp/bot_error_noqt.hh
         ${PROJECT_SOURCE_DIR}/birdwing_codegen/templates/shared_cpp/tool_mappings.hh
-        ${PROJECT_SOURCE_DIR}/site_scons/mustache_codegen.py
-)
-add_custom_target(bwfiles ALL
-    DEPENDS
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/bot_error.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/bot_error_noqt.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/tool_mappings.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/all_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/toolhead_toolidentifier.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/toolhead_initialization.cc
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/toolhead_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/machine_structs.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/machine_errors.hh
-        ${INCLUDE_OUTPUT_PATH}/bwcoreutils/machine_definitions.hh)
-install_headers(include/)
+        ${PROJECT_SOURCE_DIR}/site_scons/mustache_codegen.py)
+
+add_custom_target(
+    bwfiles
+    ALL
+    DEPENDS ${generated_headers})
+
+install(
+    FILES ${generated_headers}
+    DESTINATION ${HEADER_INSTALL_DESTINATION}/bwcoreutils)
 
 add_subdirectory(libmbeigen)
