updating eigen cmake files

--- a/libmbeigen/CMakeLists.txt
+++ b/libmbeigen/CMakeLists.txt
@@ -10,11 +10,10 @@ foreach(f ${Eigen_directory_files})
   if(NOT ${f} MATCHES "\\.txt" AND NOT ${f} MATCHES "${ESCAPED_CMAKE_CURRENT_SOURCE_DIR}/[.].+" AND NOT IS_DIRECTORY ${f})
     list(APPEND Eigen_directory_files_to_install ${f})
   endif()
-endforeach(f ${Eigen_directory_files})
-install_directory(${PROJECT_SOURCE_DIR}/ ${INCLUDE_OUTPUT_PATH}/Eigen)
+endforeach()
+
+install_directory(${PROJECT_SOURCE_DIR}/ ${HEADER_INSTALL_DESTINATION}/Eigen)
+
 install(FILES
   ${Eigen_directory_files_to_install}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen COMPONENT Devel
-  )
-
-#add_subdirectory(src)
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen COMPONENT Devel)
