Added logic to generate mb-libstdc++6 to MBCoreUtils
BST-70
http://jira.makerbot.net/browse/BST-70

--- a/debian/control
+++ b/debian/control
@@ -10,3 +10,9 @@ Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: MakerBot core utils development headers
+
+Package: mb-libstdc++6
+Section: lib
+Architecture: any
+Depends:
+Description: MakerBot distribution specific package for non-standard c++ runtime
