--- a/libmbeigen/src/Eigen2Support/CMakeLists.txt
+++ b/libmbeigen/src/Eigen2Support/CMakeLists.txt
@@ -2,7 +2,6 @@ FILE(GLOB Eigen_Eigen2Support_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Eigen2Support_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Eigen2Support COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Eigen2Support)
 
 ADD_SUBDIRECTORY(Geometry)
