--- a/libmbeigen/src/Geometry/CMakeLists.txt
+++ b/libmbeigen/src/Geometry/CMakeLists.txt
@@ -2,7 +2,6 @@ FILE(GLOB Eigen_Geometry_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Geometry_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Geometry COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Geometry)
 
 ADD_SUBDIRECTORY(arch)
