--- a/libmbeigen/src/PardisoSupport/CMakeLists.txt
+++ b/libmbeigen/src/PardisoSupport/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_PardisoSupport_SRCS "*.h")
 
 INSTALL(FILES 
   ${Eigen_PardisoSupport_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/PardisoSupport COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/PardisoSupport)
