--- a/libmbeigen/src/StlSupport/CMakeLists.txt
+++ b/libmbeigen/src/StlSupport/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_StlSupport_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_StlSupport_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/StlSupport COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/StlSupport)
