--- a/libmbeigen/src/Cholesky/CMakeLists.txt
+++ b/libmbeigen/src/Cholesky/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Cholesky_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Cholesky_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Cholesky COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Cholesky)
