--- a/libmbeigen/src/CholmodSupport/CMakeLists.txt
+++ b/libmbeigen/src/CholmodSupport/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_CholmodSupport_SRCS "*.h")
 
 INSTALL(FILES 
   ${Eigen_CholmodSupport_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/CholmodSupport COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/CholmodSupport)
