--- a/libmbeigen/src/Core/CMakeLists.txt
+++ b/libmbeigen/src/Core/CMakeLists.txt
@@ -2,8 +2,7 @@ FILE(GLOB Eigen_Core_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Core_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Core COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Core)
 
 ADD_SUBDIRECTORY(products)
 ADD_SUBDIRECTORY(util)
