--- a/libmbeigen/src/Core/arch/AltiVec/CMakeLists.txt
+++ b/libmbeigen/src/Core/arch/AltiVec/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Core_arch_AltiVec_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Core_arch_AltiVec_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Core/arch/AltiVec COMPONENT Devel
-)
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Core/arch/AltiVec)
