--- a/libmbeigen/src/Core/arch/NEON/CMakeLists.txt
+++ b/libmbeigen/src/Core/arch/NEON/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Core_arch_NEON_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Core_arch_NEON_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Core/arch/NEON COMPONENT Devel
-)
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Core/arch/NEON)
