--- a/libmbeigen/src/Core/products/CMakeLists.txt
+++ b/libmbeigen/src/Core/products/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Core_Product_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Core_Product_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Core/products COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Core/products)
