--- a/libmbeigen/src/Core/util/CMakeLists.txt
+++ b/libmbeigen/src/Core/util/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Core_util_SRCS "*.h")
 
 INSTALL(FILES 
   ${Eigen_Core_util_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Core/util COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Core/util)
