--- a/libmbeigen/src/Eigen2Support/Geometry/CMakeLists.txt
+++ b/libmbeigen/src/Eigen2Support/Geometry/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Eigen2Support_Geometry_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Eigen2Support_Geometry_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Eigen2Support/Geometry
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Eigen2Support/Geometry)
