--- a/libmbeigen/src/Eigenvalues/CMakeLists.txt
+++ b/libmbeigen/src/Eigenvalues/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_EIGENVALUES_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_EIGENVALUES_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Eigenvalues COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Eigenvalues)
