--- a/libmbeigen/src/Geometry/arch/CMakeLists.txt
+++ b/libmbeigen/src/Geometry/arch/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Geometry_arch_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Geometry_arch_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Geometry/arch COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Geometry/arch)
