--- a/libmbeigen/src/Householder/CMakeLists.txt
+++ b/libmbeigen/src/Householder/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Householder_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Householder_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Householder COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Householder)
