--- a/libmbeigen/src/Jacobi/CMakeLists.txt
+++ b/libmbeigen/src/Jacobi/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_Jacobi_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_Jacobi_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/Jacobi COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/Jacobi)
