--- a/libmbeigen/src/LU/CMakeLists.txt
+++ b/libmbeigen/src/LU/CMakeLists.txt
@@ -2,7 +2,6 @@ FILE(GLOB Eigen_LU_SRCS "*.h")
 
 INSTALL(FILES 
   ${Eigen_LU_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/LU COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/LU)
 
 ADD_SUBDIRECTORY(arch)
