--- a/libmbeigen/src/LU/arch/CMakeLists.txt
+++ b/libmbeigen/src/LU/arch/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_LU_arch_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_LU_arch_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/LU/arch COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/LU/arch)
