--- a/libmbeigen/src/OrderingMethods/CMakeLists.txt
+++ b/libmbeigen/src/OrderingMethods/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_OrderingMethods_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_OrderingMethods_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/OrderingMethods COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/OrderingMethods)
