--- a/libmbeigen/src/PaStiXSupport/CMakeLists.txt
+++ b/libmbeigen/src/PaStiXSupport/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_PastixSupport_SRCS "*.h")
 
 INSTALL(FILES 
   ${Eigen_PastixSupport_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/PaStiXSupport COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/PaStiXSupport)
