--- a/libmbeigen/src/QR/CMakeLists.txt
+++ b/libmbeigen/src/QR/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_QR_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_QR_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/QR COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/QR)
