--- a/libmbeigen/src/SVD/CMakeLists.txt
+++ b/libmbeigen/src/SVD/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_SVD_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_SVD_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/SVD COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/SVD)
