--- a/libmbeigen/src/SparseCholesky/CMakeLists.txt
+++ b/libmbeigen/src/SparseCholesky/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_SparseCholesky_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_SparseCholesky_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/SparseCholesky COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/SparseCholesky)
