--- a/libmbeigen/src/SuperLUSupport/CMakeLists.txt
+++ b/libmbeigen/src/SuperLUSupport/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_SuperLUSupport_SRCS "*.h")
 
 INSTALL(FILES 
   ${Eigen_SuperLUSupport_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/SuperLUSupport COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/SuperLUSupport)
