--- a/libmbeigen/src/misc/CMakeLists.txt
+++ b/libmbeigen/src/misc/CMakeLists.txt
@@ -2,5 +2,4 @@ FILE(GLOB Eigen_misc_SRCS "*.h")
 
 INSTALL(FILES
   ${Eigen_misc_SRCS}
-  DESTINATION ${INCLUDE_INSTALL_DIR}/Eigen/src/misc COMPONENT Devel
-  )
+  DESTINATION ${HEADER_INSTALL_DESTINATION}/Eigen/src/misc)
